--- a/style.css
+++ b/style.css
@@ -273,6 +273,10 @@ nav ul li a:hover::after{
     margin-right: 25px;
     font-size: 25px;
 }
+    .contact-left img{
+        position: relative;
+        top: 6px;
+}
 .social-icons{
     margin-top: 30px;
 }
